--- a/javascript/control_iframe.html
+++ b/javascript/control_iframe.html
@@ -16,6 +16,10 @@
            alert(123);
        };
    }
+   //jQ版
+   $(window).on("load",function () {
+            $( "#if" ).contents().find( "div" ).html("1235455555");
+        })
 </script>
 </body>
 </html>
