--- a/javascript/control_iframe.html
+++ b/javascript/control_iframe.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="//cdn.bootcss.com/jquery/3.1.0/jquery.js"></script>
 </head>
 <body>
 <iframe id="if" src="test.html"></iframe>
