--- a/canvas/bezier.html
+++ b/canvas/bezier.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div id="message"></div>
-<div id="container" style="width: 400px;height: 400px;position: relative;">
+<div id="container" style="width: 400px;height: 400px;position: relative;margin: 15px auto;-webkit-box-shadow: 1px 2px 10px grey;-moz-box-shadow: 1px 2px 10px  grey;box-shadow: 1px 2px 10px  grey;">
     <canvas id="canvas" width="400" height="400" style="display: block;width: 100%;height: 100%;"></canvas>
     <div id="p3" style="width: 8px;height: 8px;-webkit-border-radius: 50%;-moz-border-radius: 50%;border-radius: 50%;background-color:red;position: absolute;"></div>
     <div id="p2" style="width: 4px;height: 4px;border:2px solid red;position: absolute;"></div>
@@ -132,28 +132,34 @@
         });
 
         canvas.addEventListener("mouseup", function (e) {
-            var location = getLocation(e.clientX, e.clientY);
-            if (isGo_1) {
-                sp=location;
-                isGo_1 = false;
-            }
-            if (isGo_2) {
-                ep=location;
-                isGo_2 = false;
-            }
-            if (isGo_3) {
-                cp=location;
-                isGo_3 = false;
-            }
-            p1.style.pointerEvents = "auto";
-            p2.style.pointerEvents = "auto";
-            p3.style.pointerEvents = "auto";
+            endP(e);
         });
-
+        canvas.addEventListener("mouseout",function (e) {
+            endP(e);
+        });
         //定位开始点
         function drawP(tg, px, py) {
             tg.style.top = py-4 + "px";
             tg.style.left = px-4 + "px";
+        }
+        //判断结束点
+        function endP(e) {
+            var location = getLocation(e.clientX, e.clientY);
+            if (isGo_1) {
+                sp=location;
+                isGo_1 = false;
+                p1.style.pointerEvents = "auto";
+            }
+            if (isGo_2) {
+                ep=location;
+                isGo_2 = false;
+                p2.style.pointerEvents = "auto";
+            }
+            if (isGo_3) {
+                cp=location;
+                isGo_3 = false;
+                p3.style.pointerEvents = "auto";
+            }
         }
     }
     draw();
