--- a/canvas/bezier.html
+++ b/canvas/bezier.html
@@ -12,9 +12,13 @@
 </head>
 <body>
 <div id="message"></div>
-<div id="container" style="width: 400px;height: 400px;position: relative;margin: 15px auto;-webkit-box-shadow: 1px 2px 10px grey;-moz-box-shadow: 1px 2px 10px  grey;box-shadow: 1px 2px 10px  grey;">
+<div id="container"
+     style="width: 400px;height: 400px;position: relative;margin: 15px auto;-webkit-box-shadow: 1px 2px 10px grey;-moz-box-shadow: 1px 2px 10px  grey;box-shadow: 1px 2px 10px  grey;">
     <canvas id="canvas" width="400" height="400" style="display: block;width: 100%;height: 100%;"></canvas>
-    <div id="p3" style="width: 8px;height: 8px;-webkit-border-radius: 50%;-moz-border-radius: 50%;border-radius: 50%;background-color:red;position: absolute;"></div>
+    <div id="p4"
+         style="width: 8px;height: 8px;-webkit-border-radius: 50%;-moz-border-radius: 50%;border-radius: 50%;background-color:red;position: absolute;"></div>
+    <div id="p3"
+         style="width: 8px;height: 8px;-webkit-border-radius: 50%;-moz-border-radius: 50%;border-radius: 50%;background-color:red;position: absolute;"></div>
     <div id="p2" style="width: 4px;height: 4px;border:2px solid red;position: absolute;"></div>
     <div id="p1" style="width: 4px;height: 4px;border:2px solid red;position: absolute;"></div>
 </div>
@@ -25,40 +29,19 @@
         var p1 = document.getElementById("p1");
         var p2 = document.getElementById("p2");
         var p3 = document.getElementById("p3");
-        //二次曲线
-//        ctx.fillStyle="red";
-//        ctx.beginPath();
-//        ctx.moveTo(75,40);
-//        ctx.bezierCurveTo(75,37,70,25,50,25);
-//        ctx.bezierCurveTo(20,25,20,62.5,20,62.5);
-//        ctx.bezierCurveTo(20,80,40,102,75,120);
-//        ctx.bezierCurveTo(110,102,130,80,130,62.5);
-//        ctx.bezierCurveTo(130,62.5,130,25,100,25);
-//        ctx.bezierCurveTo(85,25,75,37,75,40);
-//        ctx.fill();
-//        ctx.closePath();
-//        //贝塞尔曲线
-//        ctx.beginPath();
-//        ctx.moveTo(75,25);
-//        ctx.strokeStyle="#7b3409";
-//        ctx.quadraticCurveTo(25,25,25,62.5);
-//        ctx.quadraticCurveTo(25,100,50,100);
-//        ctx.quadraticCurveTo(50,120,30,125);
-//        ctx.quadraticCurveTo(60,120,65,100);
-//        ctx.quadraticCurveTo(125,100,125,62.5);
-//        ctx.quadraticCurveTo(125,25,75,25);
-//        ctx.stroke();
-//        ctx.closePath();
-
+        var p4 = document.getElementById("p4");
         var sp = {x: 50, y: 150}
             , ep = {x: 150, y: 100}
-            , cp = {x: 80, y: 20}
+            , cp1 = {x: 80, y: 20}
+            , cp2 = {x: 150, y: 50}
             , cr = 5;
-        console.log(sp.y);
+
         drawP(p1, sp.x, sp.y);
         drawP(p2, ep.x, ep.y);
-        drawP(p3, cp.x, cp.y);
-        drawQuad(canvas,sp.x,sp.y,cp.x,cp.y,ep.x,ep.y);
+        drawP(p3, cp1.x, cp1.y);
+        drawP(p4, cp2.x, cp2.y);
+        drawBezier(canvas, sp.x, sp.y, cp1.x, cp1.y, cp2.x, cp2.y, ep.x, ep.y);
+        //drawQuad(canvas,sp.x,sp.y,cp1.x,cp1.y,ep.x,ep.y);
 
         //获取坐标
         function getLocation(x, y) {
@@ -71,46 +54,72 @@
 
         canvas.addEventListener("mousemove", function (e) {
             var location = getLocation(e.clientX, e.clientY);
-//            var message = document.getElementById("message");
-//            message.innerHTML = "x=" + location.x + " ,y=" + location.y;
-//            if(ctx.isPointInPath(location.x,location.y)){
-//
-//            }
             if (isGo_1) {
                 drawP(p1, location.x, location.y);
-                drawQuad(canvas, location.x, location.y, cp.x, cp.y, ep.x, ep.y);
+                drawQuad(canvas, location.x, location.y, cp1.x, cp1.y, ep.x, ep.y);
+                drawBezier(canvas, location.x, location.y, cp1.x, cp1.y, cp2.x, cp2.y, ep.x, ep.y);
             }
             if (isGo_2) {
                 drawP(p2, location.x, location.y);
-                drawQuad(canvas, sp.x, sp.y, cp.x, cp.y, location.x, location.y);
+                drawQuad(canvas, sp.x, sp.y, cp1.x, cp1.y, location.x, location.y);
+                drawBezier(canvas, sp.x, sp.y, cp1.x, cp1.y, cp2.x, cp2.y, location.x, location.y);
             }
             if (isGo_3) {
                 drawP(p3, location.x, location.y);
                 drawQuad(canvas, sp.x, sp.y, location.x, location.y, ep.x, ep.y);
+                drawBezier(canvas, sp.x, sp.y, location.x, location.y, cp2.x, cp2.y, ep.x, ep.y);
+            }
+            if (isGo_4) {
+                drawP(p4, location.x, location.y);
+                drawQuad(canvas, sp.x, sp.y, location.x, location.y, ep.x, ep.y);
+                drawBezier(canvas, sp.x, sp.y, cp1.x, cp1.y, location.x, location.y, ep.x, ep.y);
             }
         }, false);
 
         function drawQuad(canvas, stpx, stpy, lx, ly, endx, endy) {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
-
             ctx.beginPath();
-            ctx.strokeStyle="green";
-            ctx.moveTo(stpx,stpy);
-            ctx.lineTo(lx,ly);
+            ctx.strokeStyle = "green";
+            ctx.moveTo(stpx, stpy);
+            ctx.lineTo(lx, ly);
             ctx.stroke();
             ctx.closePath();
 
             ctx.beginPath();
-            ctx.strokeStyle="blue";
-            ctx.moveTo(endx,endy);
-            ctx.lineTo(lx,ly);
+            ctx.strokeStyle = "blue";
+            ctx.moveTo(endx, endy);
+            ctx.lineTo(lx, ly);
             ctx.stroke();
             ctx.closePath();
 
             ctx.beginPath();
-            ctx.strokeStyle="#000";
+            ctx.strokeStyle = "#000";
             ctx.moveTo(stpx, stpy);
             ctx.quadraticCurveTo(lx, ly, endx, endy);
+            ctx.stroke();
+            ctx.closePath();
+        }
+
+        function drawBezier(canvas, sx, sy, c1x, c1y, c2x, c2y, ex, ey) {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            ctx.beginPath();
+            ctx.strokeStyle = "green";
+            ctx.moveTo(sx, sy);
+            ctx.lineTo(c1x, c1y);
+            ctx.stroke();
+            ctx.closePath();
+
+            ctx.beginPath();
+            ctx.strokeStyle = "blue";
+            ctx.moveTo(ex, ey);
+            ctx.lineTo(c2x, c2y);
+            ctx.stroke();
+            ctx.closePath();
+
+            ctx.beginPath();
+            ctx.strokeStyle = "#000";
+            ctx.moveTo(sx, sy);
+            ctx.bezierCurveTo(c1x, c1y, c2x, c2y, ex, ey);
             ctx.stroke();
             ctx.closePath();
         }
@@ -118,6 +127,7 @@
         var isGo_1 = false;
         var isGo_2 = false;
         var isGo_3 = false;
+        var isGo_4 = false;
         p1.addEventListener("mousedown", function () {
             isGo_1 = true;
             this.style.pointerEvents = "none";
@@ -130,35 +140,45 @@
             isGo_3 = true;
             this.style.pointerEvents = "none";
         });
+        p4.addEventListener("mousedown", function () {
+            isGo_4 = true;
+            this.style.pointerEvents = "none";
+        });
 
         canvas.addEventListener("mouseup", function (e) {
             endP(e);
         });
-        canvas.addEventListener("mouseout",function (e) {
+        canvas.addEventListener("mouseout", function (e) {
             endP(e);
         });
         //定位开始点
         function drawP(tg, px, py) {
-            tg.style.top = py-4 + "px";
-            tg.style.left = px-4 + "px";
+            tg.style.top = py - 4 + "px";
+            tg.style.left = px - 4 + "px";
         }
+
         //判断结束点
         function endP(e) {
             var location = getLocation(e.clientX, e.clientY);
             if (isGo_1) {
-                sp=location;
+                sp = location;
                 isGo_1 = false;
                 p1.style.pointerEvents = "auto";
             }
             if (isGo_2) {
-                ep=location;
+                ep = location;
                 isGo_2 = false;
                 p2.style.pointerEvents = "auto";
             }
             if (isGo_3) {
-                cp=location;
+                cp1 = location;
                 isGo_3 = false;
                 p3.style.pointerEvents = "auto";
+            }
+            if (isGo_4) {
+                cp2 = location;
+                isGo_4 = false;
+                p4.style.pointerEvents = "auto";
             }
         }
     }
