--- a/canvas/bezier.html
+++ b/canvas/bezier.html
@@ -8,41 +8,141 @@
             width: 100%;
             height: 100%;
         }
+
+        #container {
+            width: 400px;
+            height: 400px;
+            position: relative;
+            margin: 15px auto;
+            -webkit-box-shadow: 1px 2px 10px grey;
+            -moz-box-shadow: 1px 2px 10px grey;
+            box-shadow: 1px 2px 10px grey;
+            overflow: hidden;
+        }
+
+        #canvas {
+            display: block;
+            width: 100%;
+            height: 100%;
+        }
+        #p_box{
+            width:100%;
+            height:100%;
+            position: absolute;
+            top:0;
+            left:0;
+        }
+        .tp {
+            width: 8px;
+            height: 8px;
+            -webkit-border-radius: 50%;
+            -moz-border-radius: 50%;
+            border-radius: 50%;
+            background-color: red;
+            position: absolute;
+        }
+
+        .cp {
+            width: 4px;
+            height: 4px;
+            border: 2px solid red;
+            position: absolute;
+        }
+
+        #controller {
+            width: 400px;
+            height: auto;
+            margin: 10px auto;
+            text-align: center;
+        }
+
+        #controller > span {
+            display: inline-block;
+            width: 40%;
+            height: 30px;
+            line-height: 30px;
+            color: rgba(0, 0, 0, 0.55);
+            -webkit-box-shadow: 0 0 15px grey;
+            -moz-box-shadow: 0 0 15px grey;
+            box-shadow: 0 0 15px grey;
+        }
     </style>
 </head>
 <body>
-<div id="message"></div>
-<div id="container"
-     style="width: 400px;height: 400px;position: relative;margin: 15px auto;-webkit-box-shadow: 1px 2px 10px grey;-moz-box-shadow: 1px 2px 10px  grey;box-shadow: 1px 2px 10px  grey;">
-    <canvas id="canvas" width="400" height="400" style="display: block;width: 100%;height: 100%;"></canvas>
-    <div id="p4"
-         style="width: 8px;height: 8px;-webkit-border-radius: 50%;-moz-border-radius: 50%;border-radius: 50%;background-color:red;position: absolute;"></div>
-    <div id="p3"
-         style="width: 8px;height: 8px;-webkit-border-radius: 50%;-moz-border-radius: 50%;border-radius: 50%;background-color:red;position: absolute;"></div>
-    <div id="p2" style="width: 4px;height: 4px;border:2px solid red;position: absolute;"></div>
-    <div id="p1" style="width: 4px;height: 4px;border:2px solid red;position: absolute;"></div>
+<div id="container">
+    <canvas id="canvas" width="400" height="400"></canvas>
+    <div id="p_box"></div>
 </div>
+<div id="controller">
+    <span>quadraticCurveTo</span>
+    <span>bezierCurveTo</span>
+</div>
+<script src="lib/DrawClass.js"></script>
 <script>
-    function draw() {
-        var canvas = document.getElementById("canvas");
-        var ctx = canvas.getContext("2d");
-        var p1 = document.getElementById("p1");
-        var p2 = document.getElementById("p2");
-        var p3 = document.getElementById("p3");
-        var p4 = document.getElementById("p4");
-        var sp = {x: 50, y: 150}
-            , ep = {x: 150, y: 100}
-            , cp1 = {x: 80, y: 20}
-            , cp2 = {x: 150, y: 50}
-            , cr = 5;
+        var canvas = document.getElementById("canvas")
+            , pArr = [];
+        var draw = new Draw(canvas);
+        function initPoints(num) {
+            document.getElementById("p_box").innerHTML='';
+            var frag = document.createDocumentFragment();
+            for (var i = 0;i < num; i++) {
+                var el = document.createElement("div");
+                pArr.push({x:Math.random()*105+50,y:Math.random()*55+20,isGo:false});
+                el.className = "cp";
+                frag.appendChild(el);
+                (function (i) {
+                    el.addEventListener("mousedown", function () {
+                        pArr[i]["isGo"] = true;
+                        document.getElementById("p_box").style.pointerEvents = "none";
+                    }, false);
+                })(i);
+                drawP(el, pArr[i]);
+            }
+            document.getElementById("p_box").appendChild(frag);
+        }
 
-        drawP(p1, sp.x, sp.y);
-        drawP(p2, ep.x, ep.y);
-        drawP(p3, cp1.x, cp1.y);
-        drawP(p4, cp2.x, cp2.y);
-        drawBezier(canvas, sp.x, sp.y, cp1.x, cp1.y, cp2.x, cp2.y, ep.x, ep.y);
-        //drawQuad(canvas,sp.x,sp.y,cp1.x,cp1.y,ep.x,ep.y);
-
+        document.querySelector("#controller>span:nth-child(1)").addEventListener("click", function () {
+            initPoints(3);
+            draw._drawQuad(pArr[0], pArr[2], pArr[1]);
+            canvas.addEventListener("mousemove", function (e) {
+                var location = getLocation(e.clientX, e.clientY);
+                if (pArr[0].isGo) {
+                    drawP(document.querySelectorAll(".cp")[0], location);
+                    draw._drawQuad(location, pArr[2], pArr[1]);
+                }
+                if (pArr[1].isGo) {
+                    drawP(document.querySelectorAll(".cp")[1], location);
+                    draw._drawQuad(pArr[0], pArr[2], location);
+                }
+                if (pArr[2].isGo) {
+                    drawP(document.querySelectorAll(".cp")[2], location);
+                    draw._drawQuad(pArr[0], location, pArr[1]);
+                }
+            }, false);
+        });
+        document.querySelector("#controller>span:nth-child(2)").addEventListener("click", function () {
+            initPoints(4);
+            draw._drawBezier(pArr[0], pArr[2], pArr[3], pArr[1]);
+            canvas.addEventListener("mousemove", function (e) {
+                var location = getLocation(e.clientX, e.clientY);
+                if (pArr[0].isGo) {
+                    drawP(document.querySelectorAll(".cp")[0], location);
+                    draw._drawBezier(location, pArr[2], pArr[3], pArr[1]);
+                }
+                if (pArr[1].isGo) {
+                    drawP(document.querySelectorAll(".cp")[1], location);
+                    draw._drawBezier(pArr[0], pArr[2], pArr[3], location);
+                }
+                if (pArr[2].isGo) {
+                    drawP(document.querySelectorAll(".cp")[2], location);
+                    draw._drawBezier(pArr[0], location, pArr[3], pArr[1]);
+                }
+                if (pArr[3].isGo) {
+                    drawP(document.querySelectorAll(".cp")[3], location);
+                    draw._drawBezier(pArr[0], pArr[2], location, pArr[1]);
+                }
+            }, false);
+        });
         //获取坐标
         function getLocation(x, y) {
             var lct = canvas.getBoundingClientRect();
@@ -52,137 +152,30 @@
             };
         }
 
-        canvas.addEventListener("mousemove", function (e) {
-            var location = getLocation(e.clientX, e.clientY);
-            if (isGo_1) {
-                drawP(p1, location.x, location.y);
-                drawQuad(canvas, location.x, location.y, cp1.x, cp1.y, ep.x, ep.y);
-                drawBezier(canvas, location.x, location.y, cp1.x, cp1.y, cp2.x, cp2.y, ep.x, ep.y);
-            }
-            if (isGo_2) {
-                drawP(p2, location.x, location.y);
-                drawQuad(canvas, sp.x, sp.y, cp1.x, cp1.y, location.x, location.y);
-                drawBezier(canvas, sp.x, sp.y, cp1.x, cp1.y, cp2.x, cp2.y, location.x, location.y);
-            }
-            if (isGo_3) {
-                drawP(p3, location.x, location.y);
-                drawQuad(canvas, sp.x, sp.y, location.x, location.y, ep.x, ep.y);
-                drawBezier(canvas, sp.x, sp.y, location.x, location.y, cp2.x, cp2.y, ep.x, ep.y);
-            }
-            if (isGo_4) {
-                drawP(p4, location.x, location.y);
-                drawQuad(canvas, sp.x, sp.y, location.x, location.y, ep.x, ep.y);
-                drawBezier(canvas, sp.x, sp.y, cp1.x, cp1.y, location.x, location.y, ep.x, ep.y);
-            }
-        }, false);
-
-        function drawQuad(canvas, stpx, stpy, lx, ly, endx, endy) {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-            ctx.beginPath();
-            ctx.strokeStyle = "green";
-            ctx.moveTo(stpx, stpy);
-            ctx.lineTo(lx, ly);
-            ctx.stroke();
-            ctx.closePath();
-
-            ctx.beginPath();
-            ctx.strokeStyle = "blue";
-            ctx.moveTo(endx, endy);
-            ctx.lineTo(lx, ly);
-            ctx.stroke();
-            ctx.closePath();
-
-            ctx.beginPath();
-            ctx.strokeStyle = "#000";
-            ctx.moveTo(stpx, stpy);
-            ctx.quadraticCurveTo(lx, ly, endx, endy);
-            ctx.stroke();
-            ctx.closePath();
-        }
-
-        function drawBezier(canvas, sx, sy, c1x, c1y, c2x, c2y, ex, ey) {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-            ctx.beginPath();
-            ctx.strokeStyle = "green";
-            ctx.moveTo(sx, sy);
-            ctx.lineTo(c1x, c1y);
-            ctx.stroke();
-            ctx.closePath();
-
-            ctx.beginPath();
-            ctx.strokeStyle = "blue";
-            ctx.moveTo(ex, ey);
-            ctx.lineTo(c2x, c2y);
-            ctx.stroke();
-            ctx.closePath();
-
-            ctx.beginPath();
-            ctx.strokeStyle = "#000";
-            ctx.moveTo(sx, sy);
-            ctx.bezierCurveTo(c1x, c1y, c2x, c2y, ex, ey);
-            ctx.stroke();
-            ctx.closePath();
-        }
-
-        var isGo_1 = false;
-        var isGo_2 = false;
-        var isGo_3 = false;
-        var isGo_4 = false;
-        p1.addEventListener("mousedown", function () {
-            isGo_1 = true;
-            this.style.pointerEvents = "none";
-        });
-        p2.addEventListener("mousedown", function () {
-            isGo_2 = true;
-            this.style.pointerEvents = "none";
-        });
-        p3.addEventListener("mousedown", function () {
-            isGo_3 = true;
-            this.style.pointerEvents = "none";
-        });
-        p4.addEventListener("mousedown", function () {
-            isGo_4 = true;
-            this.style.pointerEvents = "none";
-        });
-
         canvas.addEventListener("mouseup", function (e) {
             endP(e);
-        });
+        }, false);
         canvas.addEventListener("mouseout", function (e) {
             endP(e);
-        });
+        }, false);
+
         //定位开始点
-        function drawP(tg, px, py) {
-            tg.style.top = py - 4 + "px";
-            tg.style.left = px - 4 + "px";
+        function drawP(tg, p) {
+            tg.style.top = p.y - 4 + "px";
+            tg.style.left = p.x - 4 + "px";
         }
 
         //判断结束点
         function endP(e) {
             var location = getLocation(e.clientX, e.clientY);
-            if (isGo_1) {
-                sp = location;
-                isGo_1 = false;
-                p1.style.pointerEvents = "auto";
+            for(var i=0;len=pArr.length,i<len;i++){
+                if (pArr[i].isGo) {
+                    pArr[i] = location;
+                    pArr[i].isGo = false;
+                }
             }
-            if (isGo_2) {
-                ep = location;
-                isGo_2 = false;
-                p2.style.pointerEvents = "auto";
-            }
-            if (isGo_3) {
-                cp1 = location;
-                isGo_3 = false;
-                p3.style.pointerEvents = "auto";
-            }
-            if (isGo_4) {
-                cp2 = location;
-                isGo_4 = false;
-                p4.style.pointerEvents = "auto";
-            }
+            document.getElementById("p_box").style.pointerEvents = "auto";
         }
-    }
-    draw();
 </script>
 </body>
 </html>
